Updating package file

--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "fetch-dogs",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://nikul54.github.io/fetchdogs",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
@@ -55,8 +52,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
   }
 }
