--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "process": "^0.11.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-number-format": "^5.4.3",
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
